--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "react-hot-reload-example",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "watchify site.js -v -t babelify -p livereactload -o static/bundle.js",
-    "watch": "npm-run-all --parallel watch:bundle watch:server",
-    "watch:server": "nodemon --exec babel-node --ignore static/bundle.js -- server.js",
-    "watch:bundle": "watchify site.js -v -t babelify -p livereactload -o static/bundle.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@babel/preset-env": "^7.0.0-beta.54",
-    "@babel/preset-react": "^7.0.0-beta.54",
-    "@uirouter/react": "^0.8.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-hot-loader": "^4.0.0",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.54",
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/node": "^7.0.0-beta.54",
-    "babelify": "^9.0.0",
-    "browser-sync": "^2.24.6",
-    "browserify": "^16.2.2",
-    "express": "^4.16.3",
-    "gulp": "^4.0.0",
-    "livereactload": "^4.0.0-beta.2",
-    "nodemon": "^1.18.3",
-    "npm-run-all": "^4.1.3",
-    "vinyl-source-stream": "^2.0.0",
-    "watchify": "^3.11.0"
-  }
+    "name": "react-hot-reload-example",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "gulp": "gulp",
+        "start": "watchify site.js -v -t babelify -p livereactload -o static/bundle.js",
+        "watch": "npm-run-all --parallel watch:bundle watch:server",
+        "watch:server": "nodemon --exec babel-node --ignore static/bundle.js -- server.js",
+        "watch:bundle": "watchify site.js -v -t babelify -p livereactload -o static/bundle.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@babel/preset-env": "^7.0.0-beta.54",
+        "@babel/preset-react": "^7.0.0-beta.54",
+        "@uirouter/react": "^0.8.3",
+        "react": "^16.4.1",
+        "react-dom": "^16.4.1",
+        "react-hot-loader": "^4.0.0",
+        "react-redux": "^5.0.7",
+        "redux": "^4.0.0"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.0.0-beta.54",
+        "@babel/core": "^7.0.0-beta.54",
+        "@babel/node": "^7.0.0-beta.54",
+        "babelify": "^9.0.0",
+        "browser-sync": "^2.24.6",
+        "browserify": "^16.2.2",
+        "express": "^4.16.3",
+        "gulp": "^4.0.0",
+        "livereactload": "^4.0.0-beta.2",
+        "nodemon": "^1.18.3",
+        "npm-run-all": "^4.1.3",
+        "vinyl-source-stream": "^2.0.0",
+        "watchify": "^3.11.0"
+    }
 }
